# distributed-rlhf-trainer

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: bench_core.py
docs/: architecture.md  interview-prep.md
examples/: quickstart.py
social/: linkedin-post.md  x-post.md
src/distributed_rlhf_trainer/: __init__.py  cli.py  core.py  exceptions.py  models.py  utils.py
tests/: conftest.py  test_core.py  test_models.py
